resolve napari 0.5.0 compatybility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dependencies = [
     "mahotas>=1.4.10",
     "napari>=0.4.14",
     "nme>=0.1.7",
-    "numpy>=1.18.5",
+    "numpy>=1.18.5,<2", # mahotas requires rebuild for numpy 2.
     "oiffile>=2020.1.18",
     "openpyxl>=2.5.7",
     "packaging>=20.0",
