--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.10
-      - uses: tlambert03/setup-qt-libs@v
+      - uses: tlambert03/setup-qt-libs@v1
       - name: Install Windows OpenGL
         if: runner.os == 'Windows'
         run: |
