--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - uses: tlambert03/setup-qt-libs@v1
       - name: Install Windows OpenGL
         if: runner.os == 'Windows'
