--- a/.github/workflows/upgrade-dependencies.yml
+++ b/.github/workflows/upgrade-dependencies.yml
@@ -47,10 +47,10 @@ jobs:
         run: |
           python build_utils/check_updated_packages.py --main-packages
           python build_utils/check_updated_packages.py
-          echo "main_packages=$(python build_utils/check_updated_packages.py --main-packages)" >> $GITHUB_OUTPUT
-          echo "all_packages<<EOF" >> $GITHUB_OUTPUT
-          echo "$(python build_utils/check_updated_packages.py)" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          echo "main_packages=$(python build_utils/check_updated_packages.py --main-packages)" >> "$GITHUB_OUTPUT"
+          echo "all_packages<<EOF" >> "$GITHUB_OUTPUT"
+          python build_utils/check_updated_packages.py >> "$GITHUB_OUTPUT"
+          echo "EOF" >> "$GITHUB_OUTPUT"
 
       - name: Create PR updating vendored modules
         uses: peter-evans/create-pull-request@v6
