--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -71,6 +71,7 @@ jobs:
       - build_pyinstaller_bundle
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           patterns: 'PartSeg_bundle_*'
