--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -44,7 +44,7 @@ jobs:
           if (Test-Path -Path "C:\Windows\system32\opengl32.dll" -PathType Leaf) {Exit 0} else {Exit 1}
         shell: powershell
       - name: Install PartSeg
-        run: python -m pip install --editable .[pyinstaller] --constraint requirements/constraints_py3.10.txt
+        run: python -m pip install --editable ".[pyinstaller]" --constraint requirements/constraints_py3.10.txt
 
       - name: Build PartSeg bundle
         run: python build_utils/create_and_pack_executable.py
@@ -90,7 +90,7 @@ jobs:
           RELEASE_NOTES="${RELEASE_NOTES//'%'/'%25'}"
           RELEASE_NOTES="${RELEASE_NOTES//$'\n'/'%0A'}"
           RELEASE_NOTES="${RELEASE_NOTES//$'\r'/'%0D'}"
-          echo "name=contents=${RELEASE_NOTES}" >> $GITHUB_ENV
+          echo "name=contents=${RELEASE_NOTES}" >> "$GITHUB_ENV"
 
       - name: check if prerelease
         id: prerelease
@@ -105,7 +105,7 @@ jobs:
               fi
           }
           echo ${{ github.ref }}
-          echo $(check_version ${{ github.ref }})
+          check_version ${{ github.ref }}
           echo "name=prerelease=$(check_version ${{ github.ref }})" >> "$GITHUB_ENV"
 
         shell: bash
