--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -66,6 +66,7 @@ jobs:
     name: Create release
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+      contents: write  # IMPORTANT: this permission is mandatory for create release
     needs:
       - build_wheels
       - build_pyinstaller_bundle
