--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -111,6 +111,9 @@ jobs:
 
         shell: bash
 
+      - name: check release notes
+        run: echo ${{ steps.release_notes.outputs.contents }}
+
       - name: Create Release
         uses: "softprops/action-gh-release@v2"
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
