--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -91,6 +91,8 @@ jobs:
           RELEASE_NOTES="${RELEASE_NOTES//'%'/'%25'}"
           RELEASE_NOTES="${RELEASE_NOTES//$'\n'/'%0A'}"
           RELEASE_NOTES="${RELEASE_NOTES//$'\r'/'%0D'}"
+          echo ------------------
+          echo "${RELEASE_NOTES}"
           echo "name=contents=${RELEASE_NOTES}" >> "$GITHUB_ENV"
 
       - name: check if prerelease
