--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -93,7 +93,7 @@ jobs:
           RELEASE_NOTES="${RELEASE_NOTES//$'\r'/'%0D'}"
           echo ------------------
           echo "${RELEASE_NOTES}"
-          echo "name=contents=${RELEASE_NOTES}" >> "$GITHUB_OUTPUT"
+          echo "contents=${RELEASE_NOTES}" >> "$GITHUB_OUTPUT"
 
       - name: check if prerelease
         id: prerelease
@@ -109,7 +109,7 @@ jobs:
           }
           echo ${{ github.ref }}
           check_version ${{ github.ref }}
-          echo "name=prerelease=$(check_version ${{ github.ref }})" >> "$GITHUB_OUTPUT"
+          echo "prerelease=$(check_version ${{ github.ref }})" >> "$GITHUB_OUTPUT"
 
         shell: bash
 
