ci: check if release notes are properly created (#1122)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **Chores**
- Implemented a new step in the GitHub release workflow to verify the
content of release notes before creating a release.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -91,7 +91,9 @@ jobs:
           RELEASE_NOTES="${RELEASE_NOTES//'%'/'%25'}"
           RELEASE_NOTES="${RELEASE_NOTES//$'\n'/'%0A'}"
           RELEASE_NOTES="${RELEASE_NOTES//$'\r'/'%0D'}"
-          echo "name=contents=${RELEASE_NOTES}" >> "$GITHUB_ENV"
+          echo ------------------
+          echo "${RELEASE_NOTES}"
+          echo "contents=${RELEASE_NOTES}" >> "$GITHUB_OUTPUT"
 
       - name: check if prerelease
         id: prerelease
@@ -107,8 +109,7 @@ jobs:
           }
           echo ${{ github.ref }}
           check_version ${{ github.ref }}
-          echo "name=prerelease=$(check_version ${{ github.ref }})" >> "$GITHUB_ENV"
-
+          echo "prerelease=$(check_version ${{ github.ref }})" >> "$GITHUB_OUTPUT"
         shell: bash
 
       - name: Create Release
