--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -46,6 +46,11 @@ jobs:
       - name: Install PartSeg
         run: python -m pip install --editable ".[pyinstaller]" --constraint requirements/constraints_py3.10.txt
 
+      - name: compile numpy on macos-14
+        if: runner.os == 'macos-14'
+        run: |
+          python -m pip install --no-binary numpy numpy --force-reinstall --constraint requirements/constraints_py3.10.txt
+
       - name: Build PartSeg bundle
         run: python build_utils/create_and_pack_executable.py
 
