--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,8 +102,7 @@ accelerate = [
     "PyOpenGL-accelerate>=3.1.5 ; platform_machine != 'arm64'",
 ]
 all = [
-    "PyOpenGL-accelerate>=3.1.5",
-    "PyQt5!=5.15.0,>=5.12.3",
+    "PartSeg[accelerate,pyqt5]"
 ]
 docs = [
     "autodoc-pydantic",
