--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -47,7 +47,7 @@ jobs:
         run: python -m pip install --editable ".[pyinstaller]" --constraint requirements/constraints_py3.10.txt
 
       - name: compile numpy on macos-14
-        if: runner.os == 'macos-14'
+        if: ${{ matrix.os == 'macos-14' }}
         run: |
           python -m pip install --no-binary numpy numpy --force-reinstall --constraint requirements/constraints_py3.10.txt
 
