--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -100,6 +100,11 @@ jobs:
           echo "tag=${TAG}" >> "$GITHUB_ENV"
         shell: bash
 
+      - name: check env
+        run: |
+          echo "${{ env.tag }}"
+        shell: bash
+
       - name: Create Release
         uses: "softprops/action-gh-release@v2"
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
