--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -20,6 +20,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
+  apt_packages:
+    - graphviz
 
 
 # Optionally set the version of Python and requirements required to build your docs
