--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -92,7 +92,7 @@ jobs:
           RELEASE_NOTES=$(python build_utils/cut_changelog.py)
           echo "${RELEASE_NOTES}"
           echo ------------------
-          echo "contents=${RELEASE_NOTES}" >> "$GITHUB_OUTPUT"
+          echo "contents=<<EOF\n%s\nEOF" ${RELEASE_NOTES} >> "$GITHUB_OUTPUT"
 
       - name: check if prerelease
         id: prerelease
