--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -89,31 +89,24 @@ jobs:
       - name: generate release notes
         id: release_notes
         run: |
-          RELEASE_NOTES=$(python build_utils/cut_changelog.py)
-          echo "${RELEASE_NOTES}"
-          # https://github.community/t5/GitHub-Actions/set-output-Truncates-Multiline-Strings/m-p/38372/highlight/true#M3322
-          RELEASE_NOTES="${RELEASE_NOTES//'%'/'%25'}"
-          RELEASE_NOTES="${RELEASE_NOTES//$'\n'/'%0A'}"
-          RELEASE_NOTES="${RELEASE_NOTES//$'\r'/'%0D'}"
+          python build_utils/cut_changelog.py
           echo ------------------
-          echo "${RELEASE_NOTES}"
-          echo "contents=${RELEASE_NOTES}" >> "$GITHUB_OUTPUT"
+          {
+            echo 'contents<<EOF'
+            python build_utils/cut_changelog.py
+            echo EOF
+          } >> "$GITHUB_OUTPUT"
 
       - name: check if prerelease
         id: prerelease
         run: |
-          regex='^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+([ab][0-9]+|rc[0-9]+)$'
+          TAG="${GITHUB_REF/refs\/tags\/v/}"  # clean tag
+          echo "tag=${TAG}" >> "$GITHUB_ENV"
+        shell: bash
 
-          check_version() {
-              if [[ $1 =~ $regex ]]; then
-                  echo "true"
-              else
-                  echo "false"
-              fi
-          }
-          echo ${{ github.ref }}
-          check_version ${{ github.ref }}
-          echo "prerelease=$(check_version ${{ github.ref }})" >> "$GITHUB_OUTPUT"
+      - name: check env
+        run: |
+          echo "${{ env.tag }}"
         shell: bash
 
       - name: Create Release
@@ -124,7 +117,7 @@ jobs:
           name: ${{ env.tag }}
           body: ${{ steps.release_notes.outputs.contents }}
           draft: false
-          prerelease: ${{ steps.prerelease.outputs.prerelease  == 'true' }}
+          prerelease: ${{ contains(env.tag, 'rc') || contains(env.tag, 'rc') || contains(env.tag, 'rc')}}
           files: |
             dist/*
             pyinstaller/*
