--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -80,6 +80,7 @@ jobs:
       os: ${{ matrix.os }}
       qt_backend: ${{ matrix.qt_backend }}
       tox_args: ${{ matrix.tox_args }}
+      pydantic: ${{ matrix.pydantic }}
 
   base-test-main:
     name: Base py${{ matrix.python_version }}
@@ -102,6 +103,10 @@ jobs:
           - python_version: "3.9"
             os: "ubuntu-22.04"
             qt_backend: "PyQt6"
+          - python_version: "3.10"
+            os: "ubuntu-22.04"
+            qt_backend: "PyQt5"
+            pydantic: "_pydantic_1"
         exclude:
           - python_version: "3.11"
             qt_backend: "PySide2"
@@ -112,6 +117,7 @@ jobs:
       python_version: ${{ matrix.python_version }}
       os: ${{ matrix.os }}
       qt_backend: ${{ matrix.qt_backend }}
+      pydantic: ${{ matrix.pydantic }}
 
   test_coverage:
     needs: download_data
