--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,8 @@ on:
   pull_request:
     branches:
       - '**'
+    paths-ignore:
+      - .github/workflows/*
   workflow_dispatch:
 
 concurrency:
