--- a/.github/workflows/check_pr_title.yml
+++ b/.github/workflows/check_pr_title.yml
@@ -31,6 +31,13 @@ jobs:
         with:
           node-version: '20'
 
+      - name: debug print
+        run: |
+          echo $ {{ github }}
+          echo $ {{ github.event }}
+          echo $ {{ github.event.pull_request }}
+          echo $ {{ github.event.pull_request.title }}
+
       - name: Install cspell
         run: npm install -g cspell
 
