fix variable name

--- a/.github/workflows/check_pr_title.yml
+++ b/.github/workflows/check_pr_title.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Check PR title spelling
         env:
-          $PR_TITLE: ${{ github.event.pull_request.title }}
+          PR_TITLE: ${{ github.event.pull_request.title }}
         run: |
           set -x
           echo "$PR_TITLE"
