--- a/.github/workflows/check_pr_title.yml
+++ b/.github/workflows/check_pr_title.yml
@@ -8,8 +8,8 @@ on:
       - edited
       - synchronize
   pull_request:
-    branches:
-      - '**'
+    paths:
+      - '.github/workflows/check_pr_title.yml'
 
 jobs:
   lint:
@@ -26,20 +26,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install cspell
-        run: npm install -g cspell
+      - name: Install aspell
+        run: sudo apt-get install aspell
 
       - name: Check PR title spelling
         env:
           PR_TITLE: ${{ github.event.pull_request.title }}
         run: |
           echo "$PR_TITLE"
-          if ! cspell --no-progress stdin <<< "$PR_TITLE"; then
-            echo "Spelling errors found in PR title"
-            exit 1
+          if aspell --personal="./.github/project_dict.pws" list <<< "$PR_TITLE" | grep -q .; then
+              echo "Misspelled words found."
+              aspell --personal="./.github/project_dict.pws" list <<< "$PR_TITLE"
+              exit 1
+          else
+              echo "No misspelled words found."
+              exit 0
           fi
