--- a/.github/workflows/base_test_workflow.yml
+++ b/.github/workflows/base_test_workflow.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install -r requirements/requirements_dev.txt tox-gh-actions>=2.12.0 tox-min-req
+          python -m pip install -r requirements/requirements_dev.txt tox-gh-actions>=2.12.0 tox-min-req tox-uv
           pip list
 
       - name: Test with tox
@@ -95,6 +95,7 @@ jobs:
           NAPARI: ${{ inputs.napari }}
           BACKEND: ${{ inputs.qt_backend }}
           PIP_CONSTRAINT: requirements/constraints_py${{ inputs.python_version }}${{ inputs.pydantic }}.txt
+          UV_CONSTRAINT: requirements/constraints_py${{ inputs.python_version }}${{ inputs.pydantic }}.txt
 
       - uses: actions/upload-artifact@v4
         with:
