clean `UV_CONSTRAINT` in tox

--- a/tox.ini
+++ b/tox.ini
@@ -97,6 +97,7 @@ min_req_constraints=
 setenv =
     MINIMAL_REQUIREMENTS=1
     PIP_CONSTRAINT=
+    UV_CONSTRAINT=
 deps =
     {[base]deps}
     setuptools_scm[toml]>=3.4
