--- a/.github/workflows/test_napari_repo.yml
+++ b/.github/workflows/test_napari_repo.yml
@@ -5,6 +5,11 @@ on:
     - cron: '0 10 * * 1,3,5'  # every 24 hours
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  pull_request:
+    paths:
+      - '.github/workflows/test_napari_repo.yml'
+      - pyproject.toml
+      - tox.ini
 
 jobs:
   download_data:
@@ -29,7 +34,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ ubuntu-22.04 ]
-        python: ['3.8', '3.9' , '3.10', '3.11']
+        python: ['3.8', '3.9' , '3.10', '3.11', '3.12']
         napari_version: ['repo']
     steps:
       - uses: actions/checkout@v4
