fix conditions for napari_repo

--- a/tox.ini
+++ b/tox.ini
@@ -71,18 +71,20 @@ deps=
     pytest-json-report
     lxml_html_clean
 
-[testenv:py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}]
+[testenv:py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,5,repo}]
 deps =
     {[testenv]deps}
-    417: napari==0.4.17
-    417: pydantic<2
-    418: napari==0.4.18
-    418: pydantic<2
-    419: napari==0.4.19.post1
-    repo: git+https://github.com/napari/napari.git
+    napari_417: napari==0.4.17
+    napari_417: pydantic<2
+    napari_418: napari==0.4.18
+    napari_418: pydantic<2
+    napari_419: napari==0.4.19.post1
+    napari_5: napari==0.5.0
+    napari_repo: git+https://github.com/napari/napari.git
+    numpy<2
 commands =
-    !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
-    repo: python -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    !napari_repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    napari_repo: python -m pytest package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
 [testenv:py{38,39,310,311,312}-PyQt5-coverage]
 deps =
