improve pyside constrainst

--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,8 @@ deps =
     PySide2: PySide2!=5.15.0
     PyQt6: PyQt6
     # fix PySide6 when a new napari release is out
-    PySide6: PySide6
+    PySide6: PySide6<6.3.2; python_version < "3.10"
+    PySide6: PySide6; python_version >= "3.10"
     PySide2: npe2!=0.2.2
     imageio != 2.22.1
     pytest-json-report
