move recent napari to 0.5.0

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ NAPARI =
     napari417: napari_417
     napari418: napari_418
     napari419: napari_419
+    napari5: napari_5
     repo: napari_repo
 BACKEND =
     pyqt: PyQt5
