ci: Fix tests for napari from repository (#1148)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **New Features**
  - Added support for `napari` version 0.5.0.
  - Introduced new environment configuration for `napari5`.

- **Bug Fixes**
- Updated test configurations to ensure compatibility with `PySide6` and
other Python versions.
  - Improved handling of `edit_request` signals in the Colormap Creator.

- **Chores**
  - Adjusted GitHub workflow triggers and updated Python version matrix.
- Refined test skipping markers for `PySide6` to enhance test
management.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-all, py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}
+envlist = py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-all, py{39,310,311,312}-{PyQt5,PyQt6}-napari_{417,418,419,5,repo}, py{39,310}-PySide2-napari_{417,418,419,5,repo}
 toxworkdir=/tmp/tox
 
 [gh-actions]
@@ -22,6 +22,7 @@ NAPARI =
     napari417: napari_417
     napari418: napari_418
     napari419: napari_419
+    napari5: napari_5
     repo: napari_repo
 BACKEND =
     pyqt: PyQt5
@@ -39,7 +40,8 @@ deps =
     PySide2: PySide2!=5.15.0
     PyQt6: PyQt6
     # fix PySide6 when a new napari release is out
-    PySide6: PySide6<6.3.2
+    PySide6: PySide6<6.3.2; python_version < "3.10"
+    PySide6: PySide6; python_version >= "3.10"
     PySide2: npe2!=0.2.2
     imageio != 2.22.1
     pytest-json-report
@@ -71,18 +73,20 @@ deps=
     pytest-json-report
     lxml_html_clean
 
-[testenv:py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,repo}]
+[testenv:py{38,39,310,311,312}-{PyQt5,PySide2,PyQt6,PySide6}-napari_{417,418,419,5,repo}]
 deps =
     {[testenv]deps}
-    417: napari==0.4.17
-    417: pydantic<2
-    418: napari==0.4.18
-    418: pydantic<2
-    419: napari==0.4.19.post1
-    repo: git+https://github.com/napari/napari.git
+    napari_417: napari==0.4.17
+    napari_417: pydantic<2
+    napari_418: napari==0.4.18
+    napari_418: pydantic<2
+    napari_419: napari==0.4.19.post1
+    napari_5: napari==0.5.0
+    napari_repo: git+https://github.com/napari/napari.git
+    numpy<2
 commands =
-    !repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
-    repo: python -m pytest --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    !napari_repo: python -m pytest -v package/tests/test_PartSeg/test_napari_widgets.py --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    napari_repo: python -m pytest package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
 
 [testenv:py{38,39,310,311,312}-PyQt5-coverage]
 deps =
