--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,7 +99,7 @@ PartSeg = "PartSeg:napari.yaml"
 
 [project.optional-dependencies]
 accelerate = [
-    "PyOpenGL-accelerate>=3.1.5 ; platform_machine != 'arm64'",
+#    "PyOpenGL-accelerate>=3.1.5 ; platform_machine != 'arm64'",
 ]
 all = [
     "PartSeg[accelerate,pyqt5]"
@@ -114,7 +114,7 @@ pyinstaller = [
     "PartSeg[pyinstaller_base,pyqt5]",
 ]
 pyinstaller_base = [
-    "PyOpenGL-accelerate>=3.1.5 ; platform_machine != 'arm64'",
+    "PartSeg[accelerate]",
     "PyInstaller",
     "pydantic",
 ]
