--- a/.github/workflows/base_test_workflow.yml
+++ b/.github/workflows/base_test_workflow.yml
@@ -94,8 +94,8 @@ jobs:
           PYVISTA_OFF_SCREEN: True  # required for opengl on windows
           NAPARI: ${{ inputs.napari }}
           BACKEND: ${{ inputs.qt_backend }}
-          PIP_CONSTRAINT: requirements/constraints_py${{ inputs.python_version }}${{ inputs.pydantic }}.txt
-          UV_CONSTRAINT: requirements/constraints_py${{ inputs.python_version }}${{ inputs.pydantic }}.txt
+          PIP_CONSTRAINT: ${{ inputs.napari == 'latest' && 'requirements/constraints_py${{ inputs.python_version }}${{ inputs.pydantic }}.txt' | '' }}
+          UV_CONSTRAINT: ${{ inputs.napari == 'latest' && 'requirements/constraints_py${{ inputs.python_version }}${{ inputs.pydantic }}.txt' | '' }}
 
       - uses: actions/upload-artifact@v4
         with:
