test: [Automatic] Constraints upgrades: `napari`, `sentry-sdk`, `tifffile` (#1169)
This PR is automatically created and updated by PartSeg GitHub
action cron to keep bundle dependencies modules up to date.

The updated packages are:

 * importlib-metadata
 * napari
 * pytest
 * rpds-py
 * sentry-sdk
 * setuptools
 * sphinxcontrib-applehelp
 * sphinxcontrib-devhelp
 * sphinxcontrib-htmlhelp
 * sphinxcontrib-qthelp
 * sphinxcontrib-serializinghtml
 * tifffile

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit


- **New Features**
- Updated multiple dependencies to their latest versions, potentially
introducing new features and improvements.

- **Bug Fixes**
- Incremented versions of libraries that may include bug fixes to
enhance stability and performance.

- **Chores**
- Routine maintenance to keep dependencies current across different
Python versions.
- Enhanced workflow configuration for improved handling of environment
variables based on specified package versions.

<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Co-authored-by: Czaki <3826210+Czaki@users.noreply.github.com>

--- a/.github/workflows/base_test_workflow.yml
+++ b/.github/workflows/base_test_workflow.yml
@@ -94,8 +94,8 @@ jobs:
           PYVISTA_OFF_SCREEN: True  # required for opengl on windows
           NAPARI: ${{ inputs.napari }}
           BACKEND: ${{ inputs.qt_backend }}
-          PIP_CONSTRAINT: requirements/constraints_py${{ inputs.python_version }}${{ inputs.pydantic }}.txt
-          UV_CONSTRAINT: requirements/constraints_py${{ inputs.python_version }}${{ inputs.pydantic }}.txt
+          PIP_CONSTRAINT: ${{ inputs.napari == 'latest' && format('requirements/constraints_py{0}{1}.txt', inputs.python_version, inputs.pydantic ) || '' }}
+          UV_CONSTRAINT: ${{ inputs.napari == 'latest' && format('requirements/constraints_py{0}{1}.txt', inputs.python_version, inputs.pydantic ) || '' }}
 
       - uses: actions/upload-artifact@v4
         with:
