--- a/tox.ini
+++ b/tox.ini
@@ -64,7 +64,7 @@ extras =
     test
 
 commands =
-    python -m pytest package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json
+    python -m pytest package/tests --json-report --json-report-file={toxinidir}/report-{envname}-{sys_platform}.json {posargs}
 
 [testenv:py311-PySide2-conda]
 conda_env=environment.yml
