--- a/tox.ini
+++ b/tox.ini
@@ -133,6 +133,7 @@ allowlist_externals =
     tar
 extras =
     docs
+    pyqt6
 commands =
     make -C docs html
     tar -C docs/_build -czf docs.tar.gz html
